--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
   },
   "devDependencies": {
     "@types/debug": "^4.1.5",
-    "@types/js-yaml": "^3.12.1",
-    "@types/node": "^12.12.25",
+    "@types/js-yaml": "^3.12.2",
+    "@types/node": "^12.12.26",
     "@types/object-path": "0.11.0",
-    "tslint": "^5.20.1",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-simple-import-sort": "^5.0.1",
     "typescript": "^3.7.5"
   },
   "private": true,
   "scripts": {
     "build": "tsc",
-    "lint": "tslint --fix -p ."
+    "lint": "eslint --ignore-path .gitignore -c mk/eslintrc-ts.js --fix **/*.ts"
   }
 }
