--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
   "dependencies": {
+    "@strattadb/environment": "^8.0.0",
+    "@types/graceful-fs": "^4.1.3",
+    "@types/ndjson": "gist:631afb9049895ff236bb352684ba6a31",
+    "@types/node": "^12.12.29",
+    "@types/node-ssh": "^7.0.0",
+    "@types/readable-stream": "^2.3.5",
+    "@types/shell-quote": "^1.6.1",
     "@usnistgov/ndn-dpdk": "file:~/go/src/ndn-dpdk",
-    "debug": "^4.1.1",
-    "get-stream": "^5.1.0",
-    "js-yaml": "^3.13.1",
-    "object-path": "0.11.4"
+    "dotenv": "^8.2.0",
+    "graceful-fs": "^4.2.3",
+    "hard-rejection": "^2.1.0",
+    "ndjson": "^1.5.0",
+    "node-ssh": "^7.0.1",
+    "readable-stream": "^3.6.0",
+    "shell-quote": "^1.7.2",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.3",
+    "smallest-power-of-two": "^1.1.2",
+    "username": "^5.1.0"
   },
   "devDependencies": {
-    "@types/debug": "^4.1.5",
-    "@types/js-yaml": "^3.12.2",
-    "@types/node": "^12.12.26",
-    "@types/object-path": "0.11.0",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-simple-import-sort": "^5.0.1",
-    "typescript": "^3.7.5"
+    "eslint-plugin-simple-import-sort": "^5.0.1"
   },
   "private": true,
   "scripts": {
-    "build": "tsc",
     "lint": "eslint --ignore-path .gitignore -c mk/eslintrc-ts.js --fix **/*.ts"
   }
 }
