--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
     "eslint": "^6.8.0",
+    "eslint-config-xo": "^0.29.1",
+    "eslint-config-xo-typescript": "^0.26.0",
     "eslint-plugin-simple-import-sort": "^5.0.1"
   },
   "private": true,
